cambios agreagamos logros

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola perros, siganme en twitch
+        Hola perros, siganme en twitch. Ya pude conectarme a git y github :]
     </p>
 </body>
 </html>
